updated my css file to prevent overflowing on device

--- a/style.css
+++ b/style.css
@@ -10,11 +10,6 @@ body {
     text-align: center;
 }
 
-    html, body {
-        width: 100%;
-        overflow-x: hidden;
-    }
-
 p {
     color: hsl(0, 3%, 53%);
     line-height: 1.5;
@@ -465,7 +460,6 @@ footer {
     gap: 20px;
     padding: 0 20px;
     box-sizing: border-box;
-    min-width: 0;
 }
 
 .footer-input {
@@ -480,7 +474,7 @@ footer {
     color: hsl(229, 31%, 21%);
     background: #fff;
     border-radius: 4px;
-    max-width: 100%;
+    width: 100%;
     height: 50px;
     padding:  0 45px 0 20px; 
     -webkit-text-fill-color: hsl(229, 31%, 21%);
@@ -543,10 +537,11 @@ footer {
 }
 
 .footer-input.error .error-message {
- position: relative;
-        bottom: auto;
-        left: auto;
-        margin-top: 5px;
+    display: block;
+    position: absolute;
+  bottom: -30px;
+  left: 0;
+  width: 100%;
 }
 
 .footer-input.error {
